# StickyPlatforms

./: CMakeLists.txt  README.md  dev_journal  main.cpp
appImage/: StickyPlatforms.desktop  build_sdl2.sh  build_sdl2_image.sh  build_sdl2_ttf.sh  build_stickyplatforms.sh
assets/: License.txt
assets/maps/: grass.tsx  level1.tmx  level2.tmx  level3.tmx  multiplayer.tmx  rock_sand.tsx  sand.tsx  test.tmx
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  nuget.cmake  utilities.cmake
config/: config.h.in  make_unique_test.cpp  packages.config
src/: airstate.cpp  camera.cpp  camera.h  color.cpp  color.h  command.h  connectingstate.cpp  connectingstate.h  display.cpp  display.h  enemy.cpp  enemy.h  entity.cpp  entity.h  eventqueue.cpp  eventqueue.h  game.cpp  game.h  gameclearedstate.cpp  gameclearedstate.h  gamecommands.cpp  gamecommands.h  gamestate.cpp  gamestate.h  gamevector.cpp  gamevector.h  graphics.cpp  graphics.h  groundstate.cpp  hero.cpp  hero.h  herophysics.cpp  herophysics.h  herostate.cpp  herostate.h  horizcontrolstate.cpp  horizcontrolstate.h  inputhandler.cpp  inputhandler.h  loadlevelstate.cpp  (+25 more)
src/entities/: camera.cpp  camera.h  cameracontroller.cpp  cameracontroller.h  enemy.cpp  enemy.h  entity.cpp  entity.h  entityfactory.cpp  entityfactory.h  entitygroup.h  entitymanager.cpp  entitymanager.h  hero.cpp  hero.h  movementcomponent.cpp  movementcomponent.h  physicscomponent.cpp  physicscomponent.h  physicsmanager.cpp  physicsmanager.h  sword.cpp  sword.h  triggertypes.cpp  triggertypes.h
src/entities/components/: actorcontrolcomponent.cpp  actorcontrolcomponent.h  autoinputcomponent.cpp  autoinputcomponent.h  basicaicomponent.cpp  basicaicomponent.h  cameracomponent.cpp  cameracomponent.h  collisionmsg.h  component.h  damagecomponent.cpp  damagecomponent.h  directionchangedmsg.h  graphicscomponent.cpp  graphicscomponent.h  gravitycomponent.cpp  gravitycomponent.h  healthcomponent.cpp  healthcomponent.h  inputcomponent.h  inputsendercomponent.cpp  inputsendercomponent.h  message.h  movementcomponent.h  movingphysicscomponent.cpp  movingphysicscomponent.h  obstaclereachedmsg.h  physicscomponent.cpp  physicscomponent.h  playerinputcomponent.cpp  playerinputcomponent.h  remoteinputcomponent.cpp  remoteinputcomponent.h  staticphysicscomponent.cpp  staticphysicscomponent.h  swordcomponent.cpp  swordcomponent.h  triggercomponent.cpp  triggercomponent.h  victorytrigger.cpp  (+5 more)
src/entities/components/message/: cameracontrolmsg.h  childremovedmsg.h  collision.h  damagemsg.h  message.h  triggermsg.h
src/entities/states/: actorstate.cpp  actorstate.h  airclingablestate.cpp  airclingablestate.h  airstate.cpp  airstate.h  climbingstate.cpp  climbingstate.h  climbplatformstate.cpp  climbplatformstate.h  clingstate.cpp  clingstate.h  fallstate.cpp  fallstate.h  groundstate.cpp  groundstate.h  herostate.cpp  herostate.h  horizcontrolstate.cpp  horizcontrolstate.h  jumpstate.cpp  jumpstate.h  swordstate.cpp  swordstate.h  wallhugstate.cpp  wallhugstate.h
src/system/: color.cpp  color.h  display.cpp  display.h  gamevector.cpp  gamevector.h  image.cpp  image.h  inputhandler.cpp  inputhandler.h  log.cpp  log.h  main.cpp  mainloop.cpp  mainloop.h  make_unique.h  msgpack_adaptors.h  rect.cpp  rect.h  resource.cpp  resource.h  sdlinputhandler.cpp  sdlinputhandler.h  stormancerconnection.cpp  stormancerconnection.h  util.cpp  util.h  util_sdl.cpp  util_sdl.h
src/system/graphics/: frame.cpp  frame.h  graphics.cpp  graphics.h  herosquare.cpp  herosquare.h  image.cpp  image.h  rectangle.cpp  rectangle.h  text.cpp  text.h  texture.cpp  texture.h
src/test/: test.cpp  test.h
src/ui/: healthbar.cpp  healthbar.h  panelcontainer.cpp  panelcontainer.h  textwidget.cpp  textwidget.h  uipanel.cpp  uipanel.h  uiwidget.cpp  uiwidget.h
src/world/: level.cpp  level.h  tile.cpp  tile.h  tileset.cpp  tileset.h  tmxmaploader.cpp  tmxmaploader.h  tsxtilesetloader.cpp  tsxtilesetloader.h
